--- a/DATA STRUCTURES/Queue/Queue.cbp
+++ b/DATA STRUCTURES/Queue/Queue.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="std_trans" />
+		<Option title="Queue" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/std_trans" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Queue" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/std_trans" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Queue" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,7 +31,8 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="main.c">
+		<Unit filename="queue.h" />
+		<Unit filename="queue_op.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
