--- a/DATA STRUCTURES/emp_ar_inter/emp_ar_inter.cbp
+++ b/DATA STRUCTURES/emp_ar_inter/emp_ar_inter.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="std_trans" />
+		<Option title="emp_ar_inter" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/std_trans" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/emp_ar_inter" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/std_trans" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/emp_ar_inter" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="emp_ar.h" />
+		<Unit filename="emp_arop.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
