--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "/workspaces/Embedded-Systems"
+    "cmake.sourceDirectory": "/workspaces/Embedded-Systems/SYSTEM_C/systemc-2.3.3"
 }
